fixing invisible logo

--- a/style.css
+++ b/style.css
@@ -120,6 +120,10 @@ h2{
 
 
 footer {
-    position: fixed;
+    position:fixed;
+    left:0px;
     bottom:0px;
+    height:30px;
+    width:100%;
+    background:#999;
 }
